syntax = "proto3";

package helloworld.v1;

import "errors/errors.proto";

option go_package = "demo2kratos/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "helloworld.v1";
option objc_class_prefix = "APIHelloworldV1";

enum ErrorReason {
  option (errors.default_code) = 500;

  UNKNOWN = 0 [(errors.code) = 500];

  USER_NOT_FOUND = 40400 [(errors.code) = 404];

  GREETER_UNSPECIFIED = 50000 [(errors.code) = 500];
  TX_ERROR = 50001 [(errors.code) = 500];
  DB_ERROR = 50002 [(errors.code) = 500];
}
